Final modifications according to the cybertesis format

--- a/03_analisis.tex
+++ b/03_analisis.tex
@@ -338,13 +338,13 @@ Las tablas~\ref{table:global-strict}, \ref{table:local-strict}, \ref{table:super
 Los resultados, al igual que en otras evaluaciones, fueron divididos por alcance {\em local} o {\em global}, y por magnitud $\geq 4,0$ y $< 4,0$. Las evaluaciones usando los criterios {\em super-estricto} y {\em moderado} sólo se pudieron realizar usando el catálogo que provee el GUC, porque la clasificación de ``sismos sensibles'' sólo está disponible para este catálogo.
 
 
-En general, los mejores resultados se alcanzan utilizando la señal creada a partir del flujo de mensajes que contienen palabras clave. Según la evaluación moderada, reportada en la tabla ~\ref{table:moderate}, el sistema tiene Precisión$=1.00$, Recall$=0.93$ y F-measure$=0.96$ para sismos $geq$ 4,0. 
-Además, se observa que las señales que consideran menciones de países en el texto del tweet ({\em Geolocalización a partir del texto}) y en el perfil del usuario ({\em Geolocalización a partir del perfil del usuario}) también tienen buenos resultados entregando información para la detección de eventos, como se observa en las tablas~\ref{table:global-strict}, \ref{table:local-strict}, \ref{table:super-strict} and \ref{table:moderate}.
+En general, los mejores resultados se alcanzan utilizando la señal creada a partir del flujo de mensajes que contienen palabras clave. Según la evaluación moderada, reportada en la tabla ~\ref{table:moderate}, el sistema tiene Precisión$=1.00$, Recall$=0.93$ y F-measure$=0.96$ para sismos $\geq 4,0$. 
+Además, se observa que las señales que consideran menciones de países en el texto del tweet ({\em Geolocalización a partir del texto}) y en el perfil del usuario ({\em Geolocalización a partir del perfil del usuario}) también tienen buenos resultados entregando información para la detección de eventos, como se observa en las tablas~\ref{table:global-strict}, \ref{table:local-strict}, \ref{table:super-strict} y \ref{table:moderate}.
 En la práctica, estas tres señales son utilizadas juntas para detectar y localizar un evento. Primero, la detección es efectuada usando la señal de palabras clave y luego la localidad es identificada observando la señal más anómala (país más anómalo) dentro del conjunto de señales de geolocalización a partir del texto del \textit{tweet}.
 
 Las señales asociadas al idioma del \textit{tweet} no alcanzaron resultados igual de competitivos, pero los valores de Precisión, \textit{recall} y \textit{F-measure} indican que existe una relación entre la ocurrencia de un evento y las anomalías presentes en estas señales.
 
-Por otro lado, las señales asociadas al sentimiento positivo y negativo del \textit{tweet} son mas ruidosas. Ambas tienen un número importante de {\em falsos negativos}, es decir, un bajo nivel de detección. Además, ambas tienen un porcentaje importante de {\em falsos positivos}. Estas señales no entregan información confiable respecto a las detecciones de sismos y por lo tanto no son utilizadas para presentar la información. De todas formas la información de sentimiento asociado a cada {\em tweet} es almacenada en la base de datos para ser utilizada en estudios posteriores. 
+Por otro lado, las señales asociadas al sentimiento positivo y negativo del \textit{tweet} son más ruidosas. Ambas tienen un número importante de {\em falsos negativos}, es decir, un bajo nivel de detección. Además, ambas tienen un porcentaje importante de {\em falsos positivos}. Estas señales no entregan información confiable respecto a las detecciones de sismos y por lo tanto no son utilizadas para presentar la información. De todas formas la información de sentimiento asociado a cada {\em tweet} es almacenada en la base de datos para ser utilizada en estudios posteriores. 
 
 
 \subsection{Comparación de Alcance Global}
