--- a/06_anexo.tex
+++ b/06_anexo.tex
@@ -1,4 +1,4 @@
-\chapter*{Anexo I: Evaluación por País del Sistema de Detección de Sismos}
+\chapter*{Anexo A: Evaluación por País del Sistema de Detección de Sismos}
 \label{anexo:evaluacionpaises}
 
 {\small
