--- a/07_anexo.tex
+++ b/07_anexo.tex
@@ -1,4 +1,4 @@
-\chapter*{Anexo II: Publicación en HCOMP 2017}
+\chapter*{Anexo B: Publicación en HCOMP 2017}
 \label{anexo:paper}
 
 Durante el periodo de desarrollo de esta tesis se aceptó una publicación sobre el sistema de detección de sismos propuesto y su evaluación en \textit{The 5th AAAI Conference on Human Computation and Crowdsourcing} (HCOMP 2017)
