--- a/03_analisis.tex
+++ b/03_analisis.tex
@@ -16,7 +16,7 @@ En la sección \ref{sec:evaluacion} se definen los criterios de evaluación de l
 %
 Luego se procede a evaluar los resultados obtenidos al utilizar diferentes conjuntos de atributos de interés\footnote{Revisar el capítulo \ref{cap:deteccion} para más detalles de la metodología de detección y los conceptos asociados.}.
 
-Finalmente en la sección \ref{sec:conclusiónEval} se discuten los resultados y la comparación con otros estudios. 
+Finalmente en la sección \ref{sec:conclusionEval} se discuten los resultados y la comparación con otros estudios. 
 
 \section{Preparación del experimento}
 \label{sec:preparacionExperimento}
