--- a/memoria.tex
+++ b/memoria.tex
@@ -3,7 +3,7 @@
 \author{JAZMINE ALEJANDRA MALDONADO FLORES}
 \title{Detección de sismos y visualización en tiempo real usando usuarios de Twitter como "Sensores Sociales"}
 \auspicio{}
-\date{DICIEMBRE 2016}
+\date{MARZO 2018}
 \guia{Bárbara Poblete}
 \carrera{MAGÍSTER EN CIENCIAS, MENCIÓN COMPUTACIÓN}
 \memoria{TESIS PARA OPTAR AL GRADO DE}
@@ -46,7 +46,7 @@
 En este trabajo de tesis se propone un algoritmo y un sistema computacional que, basado en la extracción de mensajes publicados por los usuarios en Twitter, es capaz de detectar sismos que ocurren en el mundo en tiempo real. Las detecciones se generan en base a la monitorización de mensajes escritos en cualquier idioma y publicados desde cualquier país. El enfoque utilizado no es supervisado y se adapta automáticamente a los cambios en la entrada de datos. Para funcionar sólo requiere una lista de palabras en múltiples lenguajes, en este caso, la lista se compone por palabras relacionadas con sismos. 
 El método que se propone para detectar sismos es simple y tiene una alta tolerancia al ruido de los datos.  Además, el sistema tiene buenos resultados tanto en términos de precisión como de \textit{recall.} 
 
-Este trabajo complementa los trabajos previos que conforman el estado del arte en esta materia, puesto que éstos, en su mayoría corresponden a sistemas supervisados que implican costos de etiquetado de datos y entrenamiento. Además, los trabajos anteriores utilizan enfoques que detectan sismos en áreas geográficas delimitadas o para idiomas específicos, añadiendo filtros estrictos para reducir el ruido y haciendo difícil su adaptación a un enfoque internacional. En este documento se presenta una evaluación cuantitativa de las detecciones realizadas en un período de 9 meses, mostrando que la solución propuesta es competitiva respecto a los mejores métodos propuestos en el estado del arte. 
+Este trabajo complementa los trabajos previos que conforman el estado del arte en esta materia, puesto que éstos, en su mayoría corresponden a sistemas supervisados que implican costos de etiquetado de datos y entrenamiento. Además, los otros estudios utilizan enfoques que detectan sismos en áreas geográficas delimitadas o para idiomas específicos, añadiendo filtros estrictos para reducir el ruido y haciendo difícil su adaptación a un enfoque internacional. En este documento se presenta una evaluación cuantitativa de las detecciones realizadas en un período de 9 meses, mostrando que la solución propuesta es competitiva respecto a los mejores métodos propuestos en el estado del arte. 
 
 Además, se implementó un sistema Web que presenta la información en tiempo real mediante visualizaciones interactivas, actualmente utilizado por el Centro Sismológico Nacional de la Universidad de Chile como una fuente de información complementaria. Esta aplicación Web se encuentra disponible públicamente y puede ser visitada en \url{http://www.twicalli.cl}.
 
